# djboiler

./: .env.docker  .env.template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup-dev.sh
djboiler/app_x/: __init__.py  apps.py  models.py  tests.py  urls.py
djboiler/app_x/migrations/: 0001_initial.py
djboiler/main/: asgi.py  context_processors.py  exceptions.py  middleware.py  models.py  strings.py  urls.py  utils.py  wsgi.py
djboiler/main/settings/: base.py  dev.py  local.py.example  prod.py
djboiler/users/: admin.py
djboiler/users/migrations/: 0001_initial.py
envs/dev/: .env.template  run.sh
envs/prod/: .env.template  Dockerfile  run.sh
ext/db/: Dockerfile
ext/db/scripts/: createdb.sh
ext/nginx/: Dockerfile
ext/nginx/sites/: djboiler.conf
templates/: base.html
